# aiode

./: .gitignore  Dockerfile  Installation.md  README.md  build.gradle  docker-compose.yml  pom.xml  settings.gradle  versions.xml
.github/: FUNDING.yml
Docs/: Example Service.md
bash/: launch.sh  update.sh
html/: default_error_page.html  login.html  playlist_view.html  queue_view.html
osiris/: .env  .gitignore  Cargo.toml
osiris/src/: command.rs  db.rs  error.rs  event_handler.rs  glyph_api.rs  main.rs  model.rs  schema.rs
osiris/src/command/: help.rs  invite.rs  overview.rs
resources/: commandInterceptors.xml  commandSchema.xsd  commands.xml  current-version.txt  default_error_page.html  guildSpecificationSchema.xsd  guildSpecifications.xml  hibernate.cfg.xml  httpHandlers.xml  log4j2.properties  login.html  playlistSchema.xsd  playlist_view.html  playlists.xml  queue_view.html  settings.properties  startupTasks.xml  versions.xml
resources-public/: style.css
resources/bash/: launch.sh  update.sh
resources/html/: playlist_view.html  queue_view.html
resources/schemas/: commandInterceptorSchema.xsd  commandSchema.xsd  cronJobSchema.xsd  guildPropertySchema.xsd  guildSpecificationSchema.xsd  httpHandlerSchema.xsd  startupTaskSchema.xsd  versionSchema.xsd
resources/xml-contributions/: commandInterceptors.xml  commands.xml  cronJobs.xml  embedDocuments.xml  (+2 more)
src/main/webapp/: .gitignore  Cargo.toml  Makefile.toml  index.html
src/main/webapp/css/: style.css
src/main/webapp/src/: lib.rs  session.rs
src/main/webapp/src/page/: auth.rs  home.rs  mod.rs
(+963 files in other folders)
