[package]
name = "osiris"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "numeric", "postgres", "r2d2", "uuid"] }
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
dotenvy = "0.15"
fern = { version = "0.6.1", features = ["date-based"] }
futures = "0.3"
lazy_static = "1.5.0"
log = "0.4"
reqwest = { version = "0.12.8", features = ["json"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = "1.0"
serde_json = "1.0"
serenity = "0.12"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.12.0"
