[package]
name = "webapp"
version = "0.1.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Web client for the botify REST API"
repository = "https://github.com/robinfriedli/botify"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.6.0"
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
wasm-bindgen = "0.2.58"
